--- a/package.json
+++ b/package.json
@@ -1,36 +1,65 @@
 {
   "name": "scrimba",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
-  },
+  "description": "ReactJs App with Eslint",
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/figa-Oz/scrimba.git"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+  "keywords": [
+    "React",
+    "Javascript",
+    "Typescript",
+    "Eslint",
+    "Node",
+    "npm"
   ],
+  "author": "Agif Sofyan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/figa-Oz/scrimba/issues"
+  },
   "devDependencies": {
     "eslint": "^5.12.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.5.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.15.3"
-  }
+  },
+  "dependencies": {
+    "ansi-colors": "^3.2.3",
+    "axios": "^0.18.0",
+    "gravatar-url": "^2.0.0",
+    "jwt-decode": "^2.2.0",
+    "kleur": "^3.0.1",
+    "normalizr": "^3.3.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0",
+    "validator": "^10.11.0"
+  },
+  "homepage": "https://github.com/figa-Oz/scrimba#readme",
+  "proxy": "http://localhost:8080"
 }
