--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "url": "https://github.com/figa-Oz/scrimba/issues"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.5.0",
     "eslint-plugin-import": "^2.14.0",
@@ -61,5 +60,11 @@
     "validator": "^10.11.0"
   },
   "homepage": "https://github.com/figa-Oz/scrimba#readme",
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
